docs: Remove unnecessary equation numbers
Remove equation numbers in matricial LP problem in 03.ipynb

--- a/handbook/03.ipynb
+++ b/handbook/03.ipynb
@@ -129,7 +129,7 @@
     "For each step $(t_k,t_{k+1})$, the LP problem becomes (omitting the superscript in $\\mathbf{P}^{(k)}$ and $\\mathbf{F}^{(k)}$):\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "&\\min_\\mathbf{P} \\text{tr}\\big(\\mathbf{PF}\\big)\\\\\n",
     "\\text{subject to:}&\\nonumber\\\\\n",
     "&\\mathbf{P}\\mathbb{1}=\\mathbb{1}\\\\\n",
@@ -137,7 +137,7 @@
     "&\\mathbf{Pr}=\\mathbf{\\beta}(k)^2\\mathbf{r}+(1-\\mathbf{\\beta}(k)^2)\\mathbb{1}\\\\\n",
     "&\\mathbf{q}^\\text{T}\\mathbf{P}=\\mathbf{q}^\\text{T}\\\\\n",
     "&p_{ij}^k\\geq 0 \\qquad \\forall i,j\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
     "\"tr\" in the objective function is the _trace_ operator. When applied to a product of square matrices, trace computes the sum over all components of a Hadamard (or entrywise) product of $\\mathbf{P}$ and $\\mathbf{F}$, so that $\\text{tr}\\big(\\mathbf{PF}\\big) = \\sum_{ij}\\big(\\mathbf{P}\\circ\\mathbf{F}\\big)_{ij}=\\sum_{ij}\\mathbf{P}_{ij}\\mathbf{F}_{ij}$, where \n",
