docs: Remove unnecessary equation numbers
Remove equation numbers is kurtosis matching LSQ problem in 06.ipynb

--- a/handbook/06.ipynb
+++ b/handbook/06.ipynb
@@ -92,13 +92,13 @@
     "To cope with this issue, the authors devise an optimisation procedure that attempts to generate variates which, by construction, possess the basic properties of the standard normal distribution. The strategy involves choosing a set of probabilities $\\big\\{q_i\\big\\}_{i=1}^m$ from a user-defined distribution, and using such set to compute, first, the endpoints of the strata, then, the sequence of variates. The latter are found by solving the following constrained nonlinear least-squares problem:\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "&\\min_{z_i}\\bigg(\\sum_{i=1}^{m}q_iz_i^4-3\\bigg)^2\\\\\n",
     "\\text{subject to:}&\\nonumber\\\\\n",
     "&\\sum_{i=1}^{m}q_iz_i=0\\\\\n",
     "&\\sum_{i=1}^{m}q_iz_i^2=1\\\\\n",
     "&Z_{i-1}\\leq z_i\\leq Z_{i}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
     "The above formulation has three merits.\n",
