docs: Resize 'figure-1.png' in 01.ipynb

--- a/handbook/01.ipynb
+++ b/handbook/01.ipynb
@@ -31,10 +31,11 @@
     "\n",
     "#### Figure 1: Features of the Willow Tree*\n",
     "\n",
-    "![features-of-the-willow-tree](../img/figure-1.png)\n",
+    "<img src=\"../img/figure-1.png\" alt=\"Features of the Willow Tree\" style=\"width: 800px;\"/>\n",
+    "\n",
     "_* Figure 1-L adapted from Curran [4] and Acott [1]._\n",
     "\n",
-    "- __Figure 1-L__: High- (blue) and low- (ochre) probability regions respectively considered and neglected in the willow tree framework.\n",
+    "- __Figure 1-L__: High- (blue) and low- (peach) probability regions respectively considered and neglected in the willow tree framework.\n",
     "\n",
     "- __Figure 1-R__: Paths travel across a lattice structure squeezed in the body of the desired density."
    ]
