docs: Change link to 'figure-1.png' in 01.ipynb

--- a/handbook/01.ipynb
+++ b/handbook/01.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "#### Figure 1: Features of the Willow Tree*\n",
     "\n",
-    "<img src=\"../img/figure-1.png\" alt=\"Features of the Willow Tree\" style=\"width: 800px;\"/>\n",
+    "<img src=\"../handbook/img/figure-1.png\" alt=\"Features of the Willow Tree\" style=\"width: 850px;\"/>\n",
     "\n",
     "_* Figure 1-L adapted from Curran [4] and Acott [1]._\n",
     "\n",
