docs: Add math formula for array q in 02.ipynb

--- a/handbook/02.ipynb
+++ b/handbook/02.ipynb
@@ -150,6 +150,7 @@
     "\n",
     "Each transition matrix $\\mathbf{P}^{(k)}$, for $k = 0,\\dots,n-1$, has extended form:\n",
     "\n",
+    "\n",
     "$$\n",
     "\\mathbf{P}^{(k)}=\n",
     "\\begin{bmatrix}\n",
@@ -160,13 +161,27 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
+    "\n",
     "In a transition matrix, subscript $i$ in each $p_{ij}^k$ denotes both the particular row of the matrix and the starting state, whereas subscript $j$ denotes both the column and the ending state. Each row of $\\mathbf{P}^{(k)}$ collects the probabilities to transit from state $i$ to any state $j$, while each column the probabilities to end at state $j$ starting from any state $i$.\n",
     "\n",
     "Transition matrices are _stochastic matrices_: all their entries are nonnegative, and each row (the marginal probabilities) sums to 1, or $\\sum_{j=1}^m p_{ij}=1$, for all $i$. When also each column sums to 1, so that $\\sum_{i=1}^m p_{ij}=1$, for all $j$, holds, the matrices are said to be _doubly stochastic_.\n",
     "\n",
     "#### Vector $\\mathbf{q}$\n",
     "\n",
-    "Matrix $\\mathbf{P}^{(0)}$ represents a special case in the sequence. At the current date, $k=0$, there is no uncertainty about the starting node, $0$. Hence, the matrix $\\big[p_{0j}^0\\big]$ boils down to row vector $\\mathbf{q}$, or $\\{q_i\\}_{i=1}^m$, collecting the probabilities to reach any state $j$ from current state $0$.\n",
+    "Matrix $\\mathbf{P}^{(0)}$ represents a special case in the sequence. At the current date, $k=0$, there is no uncertainty about the starting node, $0$. Hence, the matrix $\\big[p_{0j}^0\\big]$ boils down to row vector $\\mathbf{q}$, or $\\{q_i\\}_{i=1}^m$, collecting the probabilities to reach any state $j$ from current state $0$:\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{q}=\n",
+    "\\begin{bmatrix}\n",
+    "p^0_{01} & p^0_{02} & \\dots & p^0_{03}\\\\\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "q_1 & q_2 & \\dots & q_m\\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
     "\n",
     "Vector $\\mathbf{q}$ can be user-defined, as explained in the previous paragraph, or may be retrieved from empirical data, together with vector $\\mathbf{z}$, through a calibration procedure (see [Xu, Hong, and Qin's Methodology](06.ipynb)).\n",
     "\n",
