docs: Fix equation rendition bug in 02.ipynb
This commit attempts to fix a bug occurring when 02.ipynb is rendered
in NBViewer.

The bug prevents the equation for vector q from correctly displaying
in $$ 'equation mode'. The equation is converted to inline math, which
hopefully translated well on NBViewer.

--- a/handbook/02.ipynb
+++ b/handbook/02.ipynb
@@ -168,10 +168,7 @@
     "\n",
     "#### Vector $\\mathbf{q}$\n",
     "\n",
-    "Matrix $\\mathbf{P}^{(0)}$ represents a special case in the sequence. At the current date, $k=0$, there is no uncertainty about the starting node, $0$. Hence, the matrix $\\big[p_{0j}^0\\big]$ boils down to row vector $\\mathbf{q}$, or $\\{q_i\\}_{i=1}^m$, collecting the probabilities to reach any state $j$ from current state $0$:\n",
-    "\n",
-    "\n",
-    "$$\n",
+    "Matrix $\\mathbf{P}^{(0)}$ represents a special case in the sequence. At the current date, $k=0$, there is no uncertainty about the starting node, $0$. Hence, the matrix $\\big[p_{0j}^0\\big]$ boils down to row vector $\n",
     "\\mathbf{q}=\n",
     "\\begin{bmatrix}\n",
     "p^0_{01} & p^0_{02} & \\dots & p^0_{03}\\\\\n",
@@ -180,8 +177,7 @@
     "\\begin{bmatrix}\n",
     "q_1 & q_2 & \\dots & q_m\\\\\n",
     "\\end{bmatrix}\n",
-    "$$\n",
-    "\n",
+    "$, collecting the probabilities to reach any state $j$ from current state $0$.\n",
     "\n",
     "Vector $\\mathbf{q}$ can be user-defined, as explained in the previous paragraph, or may be retrieved from empirical data, together with vector $\\mathbf{z}$, through a calibration procedure (see [Xu, Hong, and Qin's Methodology](06.ipynb)).\n",
     "\n",
