docs: Remove equation for array q in 02.ipynb
This commit removes an equation causing a rendition bug in NBViewer,
since every attempt to fix it failed.

--- a/handbook/02.ipynb
+++ b/handbook/02.ipynb
@@ -169,15 +169,7 @@
     "#### Vector $\\mathbf{q}$\n",
     "\n",
     "Matrix $\\mathbf{P}^{(0)}$ represents a special case in the sequence. At the current date, $k=0$, there is no uncertainty about the starting node, $0$. Hence, the matrix $\\big[p_{0j}^0\\big]$ boils down to row vector $\n",
-    "\\mathbf{q}=\n",
-    "\\begin{bmatrix}\n",
-    "p^0_{01} & p^0_{02} & \\dots & p^0_{03}\\\\\n",
-    "\\end{bmatrix}\n",
-    "=\n",
-    "\\begin{bmatrix}\n",
-    "q_1 & q_2 & \\dots & q_m\\\\\n",
-    "\\end{bmatrix}\n",
-    "$, collecting the probabilities to reach any state $j$ from current state $0$.\n",
+    "\\mathbf{q}$, collecting the probabilities to reach any state $j$ from current state $0$. Each element $p^0_{0j}$, for $j = 1,\\dots,m$, is actually equivalent to $q_i$, for $i = 1,\\dots,m$.\n",
     "\n",
     "Vector $\\mathbf{q}$ can be user-defined, as explained in the previous paragraph, or may be retrieved from empirical data, together with vector $\\mathbf{z}$, through a calibration procedure (see [Xu, Hong, and Qin's Methodology](06.ipynb)).\n",
     "\n",
