docs: Change link to 'figure-2.png' in 02.ipynb

--- a/handbook/02.ipynb
+++ b/handbook/02.ipynb
@@ -87,7 +87,9 @@
     "\n",
     "\n",
     "#### Figure 2: Stratified Sampling*\n",
-    "![stratified-sampling](../img/figure-2.png)\n",
+    "<img src=\"../handbook/img/figure-2.png\" alt=\"Features of the Willow Tree\" style=\"width: 425px;\"/>\n",
+    "\n",
+    "\n",
     "_* Adapted from Ho [8]._\n",
     "\n",
     "#### Vector $\\mathbf{t}$\n",
