docs: Change link to 'figure-3.png' in 06.ipynb

--- a/handbook/06.ipynb
+++ b/handbook/06.ipynb
@@ -41,7 +41,8 @@
     "- Second, $\\gamma$, the weighting parameter, is responsible for the form of the distribution. When $\\gamma=0$, the distribution is uniform, as it is in Curran's sampling strategy. In this case, the nodes are equiprobable. When $\\gamma=1$, the distribution is triangular. Here, the central nodes have the maximum weight possible. Choices of $\\gamma$ anywhere in-between flatten or sharpen the distribution [Figure 4].\n",
     "\n",
     "#### Figure 4: Different Shapes for the Probability Distribution, $m$ = 30*\n",
-    "![choices-of-gamma](../img/figure-4.png)\n",
+    "<img src=\"../handbook/img/figure-3.png\" alt=\"Features of the Willow Tree\" style=\"width: 425px;\"/>\n",
+    "\n",
     "_* Adapted from Xu, Hong, and Qin [14]._\n",
     "\n",
     "- Third, the larger the value of the parameter, the faster the convergence of the pricing process to the true price. The reason for this behaviour is that, on average, the standard Brownian motion stays close to the origin with high probability, a consequence of both the martingality condition and the shape of the standard normal density. \n",
