docs: Change link to 'figure-4.png' in 04.ipynb

--- a/handbook/04.ipynb
+++ b/handbook/04.ipynb
@@ -20,7 +20,7 @@
     "Each realised sequence of the process, $\\big\\{Y_{t_k}\\big\\}_{k=0}^{n}$, is a path in the lattice structure.\n",
     "\n",
     "#### Figure 3: Anatomy of a Willow Tree\n",
-    "![anatomy-of-the-willow-tree](../img/figure-3.png)\n",
+    "![anatomy-of-the-willow-tree](../handbook/img/figure-4.png)\n",
     "\n",
     "- At each time step, $m$ representative variates are selected through stratified sampling from a Gaussian distribution whose variance in $t_k$ is equal to the length of the time period, so that $Z_k\\sim\\sqrt{t_k}\\mathcal{N}\\big(0,1\\big)=\\mathcal{N}\\big(0,t_k\\big)$.\n",
     "\n",
